        [ ] - add setup pages for newly installed packages
        [ ] - add support for package-specific configurable parameters in URL-rewrite rules (e.g., $(param docs_dir))
        [ ] - when an admin is logged in, query github and get the versions of all the packages that are compatible with the current version of \compose\
            [ ] - define somehow pkg <-> compose compatibility maps

    [ ] - v0.9
        [ ] - /system/config/configuration.php is now /system/config/configuration.json managed via a JsonDB instance at the very beginning of the init procedure (maybe in Configuration::init?, check whether JsonDB depends on Configuration)

        [X] - updated CSS checkbox switch

        [X] - Update the API Documentation so that it shows whether an API action is accessible via web/app
            [ ] - Update the API Documentation so that we explain the difference between the two authentication modes (web VS app)

        [ ] - It is now possible to update the status of a user

        [ ] - Core now checks the package dependencies of each package installed and disables it if at least one of the dependencies is not satisfied

        [X] - implemented error collection and `Debug` page with shortcut to a GitHub New Issue page

        [X] - add API Keys to user profile
            [X] - implement multi API keys per user with per key enabled API actions

        [X] - the RestfulAPI is now managed by the class \system\classes\RestfulAPI.
            [X] - update api page
            [X] - update api settings page
            [X] - update api settings actions
            [X] - update api executors
            [X] - update web-api index file

        [X] - add cache system
            [X] - cache Core::$packages
            [X] - cache Core::$pages
            [X] - cache Core::$api
            [X] - cache Core::$settings

        [X] - implement maintenance mode
            [X] - all the pages will be redirected to maintenance
