@@ -26,16 +26,6 @@ class Configuration {
 	public static $ACTION;
 	public static $ARG1;
 	public static $ARG2;
-	public static $SHORT_SITE_NAME;
-	public static $SHORT_SITE_LINK;
-
-	public static $NOREPLY_MAIL_ADDRESS;
-	public static $NOREPLY_MAIL_HOST;
-	public static $NOREPLY_MAIL_AUTH;
-	public static $NOREPLY_MAIL_USERNAME;
-	public static $NOREPLY_MAIL_PASSWORD;
-	public static $NOREPLY_MAIL_SECURE_PROTOCOL;
-	public static $NOREPLY_MAIL_SERVER_PORT;
 
 	public static $IS_MOBILE = false;
 
@@ -75,17 +65,7 @@ class Configuration {
 			// TODO: (Experimental) $BASE and $BASE_URL are now obtained from $_SERVER['HTTP_HOST']
 			// self::$BASE_URL = $BASE_URL;
 			// self::$BASE = $BASE_URL; //TODO: for language or other link tags
-
-			self::$SHORT_SITE_NAME = $SHORT_SITE_NAME;
-			self::$SHORT_SITE_LINK = $SHORT_SITE_LINK;
-			//
-			self::$NOREPLY_MAIL_ADDRESS = $NOREPLY_MAIL_ADDRESS;
-			self::$NOREPLY_MAIL_HOST = $NOREPLY_MAIL_HOST;
-			self::$NOREPLY_MAIL_AUTH = $NOREPLY_MAIL_AUTH;
-			self::$NOREPLY_MAIL_USERNAME = $NOREPLY_MAIL_USERNAME;
-			self::$NOREPLY_MAIL_PASSWORD = $NOREPLY_MAIL_PASSWORD;
-			self::$NOREPLY_MAIL_SECURE_PROTOCOL = $NOREPLY_MAIL_SECURE_PROTOCOL;
-			self::$NOREPLY_MAIL_SERVER_PORT = $NOREPLY_MAIL_SERVER_PORT;
+			
 			//
 			self::$CACHE_SYSTEM = $CACHE_SYSTEM;
 			self::$WEBAPI_VERSION = $WEBAPI_VERSION;
