@@ -1,22 +1,5 @@
 <?php
 
-/* Timezone settings */
-$TIMEZONE = 'America/Chicago';
-date_default_timezone_set($TIMEZONE);
-
-/* Platform URLs settings */
-$SHORT_SITE_NAME = "Compose";
-$SHORT_SITE_LINK = "Compose";
-
-/* No-Reply email address settings */
-$NOREPLY_MAIL_ADDRESS = 'no-reply@example.com';
-$NOREPLY_MAIL_HOST = 'mail.example.org';
-$NOREPLY_MAIL_AUTH = true;
-$NOREPLY_MAIL_USERNAME = 'no-reply.example';
-$NOREPLY_MAIL_PASSWORD = 'my_password';
-$NOREPLY_MAIL_SECURE_PROTOCOL = 'none';
-$NOREPLY_MAIL_SERVER_PORT = 587;
-
 /* Platform API settings */
 $WEBAPI_VERSION = '1.0';
 
